chore: modified reports related sql implementation into projections and optimised comments